@@ -1,2 +1,0 @@
-debian/presubj                  usr/share/bug/grub-common
-debian/apport/source_grub2.py   usr/share/apport/package-hooks/
