@@ -1,0 +1,2 @@
+usr/bin/grub-mkrescue
+usr/share/man/man1/grub-mkrescue.1
