@@ -1,0 +1,37 @@
+../../debian/presubj			usr/share/bug/grub-common
+../../debian/apport/source_grub2.py	usr/share/apport/package-hooks/
+
+etc/bash_completion.d
+etc/grub.d
+usr/bin/grub-bin2h
+usr/bin/grub-editenv
+usr/bin/grub-fstest
+usr/bin/grub-kbdcomp
+usr/bin/grub-menulst2cfg
+usr/bin/grub-mkfont
+usr/bin/grub-mkimage
+usr/bin/grub-mklayout
+usr/bin/grub-mkpasswd-pbkdf2
+usr/bin/grub-mkrelpath
+usr/bin/grub-script-check
+usr/lib/grub/grub-mkconfig_lib
+usr/lib/grub/update-grub_lib
+usr/sbin/grub-mkconfig
+usr/sbin/grub-mkdevicemap
+usr/sbin/grub-probe
+usr/share/grub
+usr/share/info
+usr/share/locale
+usr/share/man/man1/grub-bin2h.1
+usr/share/man/man1/grub-editenv.1
+usr/share/man/man1/grub-fstest.1
+usr/share/man/man1/grub-menulst2cfg.1
+usr/share/man/man1/grub-mkfont.1
+usr/share/man/man1/grub-mkimage.1
+usr/share/man/man1/grub-mklayout.1
+usr/share/man/man1/grub-mkpasswd-pbkdf2.1
+usr/share/man/man1/grub-mkrelpath.1
+usr/share/man/man1/grub-script-check.1
+usr/share/man/man8/grub-mkconfig.8
+usr/share/man/man8/grub-mkdevicemap.8
+usr/share/man/man8/grub-probe.8
