@@ -1,0 +1,2 @@
+usr/bin/grub-mount
+usr/share/man/man1/grub-mount.1
