@@ -1,0 +1,4 @@
+usr/bin/grub-mkrescue
+usr/sbin/grub-ofpathname
+usr/share/man/man1/grub-mkrescue.1
+usr/share/man/man8/grub-ofpathname.8
