@@ -1,0 +1,4 @@
+usr/bin/grub-emu
+usr/bin/grub-emu-lite
+usr/lib/grub/*-*/
+usr/share/man/man1/grub-emu.1
