@@ -1,0 +1,2 @@
+usr/sbin/grub-setup
+usr/share/man/man8/grub-setup.8
